--- a/index.html
+++ b/index.html
@@ -10,24 +10,28 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../css/store.css" />
+    <link rel="stylesheet" href="./css/main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Trade+Winds&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
   </head>
   <body>
     <!-- nav  -->
     <section class="colored-section">
       <div class="container-fluid">
         <!-- Nav Bar -->
-        
+
         <nav class="navbar navbar-expand-lg navbar-dark">
-          <a class="navbar-brand trade-winds-regular" href="./main.html">QUANGPHUOC</a>
+          <a class="navbar-brand trade-winds-regular" href="./main.html"
+            >QUANGPHUOC</a
+          >
           <button
             class="navbar-toggler"
             type="button"
@@ -42,22 +46,66 @@
           <!-- Real Nav -->
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="./store.html">Sản phẩm</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Gọi mua: 0899838390</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./login">Đăng nhập</a>
-                  </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./store.html">Sản phẩm</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Gọi mua: 0899838390</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./login">Đăng nhập</a>
+              </li>
             </ul>
           </div>
         </nav>
       </div>
     </section>
 
-  <!-- Footer -->
+    <!-- Hero Section -->
+    <section id="home" class="hero">
+      <h1>Chào Mừng Đến Với QUANGPHUOC STORE</h1>
+      <p>Khám phá những mẫu laptop mới nhất, mạnh mẽ nhất với giá cả hợp lý.</p>
+      <a href="#about" class="btn">Tìm Hiểu Thêm</a>
+    </section>
+
+    <!-- About Section -->
+    <section id="about" class="about colored-section">
+      <h2>Về Chúng Tôi</h2>
+      <p>
+        QUANGPHUOC STORE là nền tảng bán laptop phục vụ cho công việc, học tập,
+        chơi game,... Chúng tôi luôn hướng đến sự đơn giản, tiện lợi và bảo mật
+        cho người dùng.
+      </p>
+    </section>
+
+    <!-- Features Section -->
+    <section id="features" class="features">
+      <h2>Tính Năng Nổi Bật</h2>
+      <div class="feature-list">
+        <div class="feature">
+          <h3>Bảo mật cao</h3>
+          <p>
+            Chúng tôi cam kết bảo vệ thông tin cá nhân của bạn với công nghệ bảo
+            mật tiên tiến nhất.
+          </p>
+        </div>
+        <div class="feature">
+          <h3>Dễ dàng sử dụng</h3>
+          <p>
+            Giao diện thân thiện và trực quan, phù hợp cho mọi đối tượng người
+            dùng.
+          </p>
+        </div>
+        <div class="feature">
+          <h3>Hỗ trợ 24/7</h3>
+          <p>
+            Đội ngũ hỗ trợ luôn sẵn sàng giải đáp mọi thắc mắc của bạn mọi lúc,
+            mọi nơi.
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- Footer -->
     <footer class="footer">
       <div class="footer-content">
         <div class="footer-section company-name">
@@ -77,18 +125,23 @@
           <p><i class="fas fa-map-marker-alt"></i> Ho Chi Minh City, Vietnam</p>
           <p><i class="fas fa-envelope"></i> QUANGPHUOC@example.com</p>
           <p><i class="fas fa-phone"></i> 1234 5878</p>
-
         </div>
         <div class="footer-section social">
           <h3>Theo dõi</h3>
           <div class="social-icons">
-            <a target="_blank" href="https://facebook.com"><i class="fab fa-facebook"></i></a>
-            <a target="_blank" href="https://tiktok.com"><i class="fab fa-tiktok"></i></a>
-            <a target="_blank" href="https://twitter.com"><i class="fab fa-twitter"></i></a>
+            <a target="_blank" href="https://facebook.com"
+              ><i class="fab fa-facebook"></i
+            ></a>
+            <a target="_blank" href="https://tiktok.com"
+              ><i class="fab fa-tiktok"></i
+            ></a>
+            <a target="_blank" href="https://twitter.com"
+              ><i class="fab fa-twitter"></i
+            ></a>
           </div>
         </div>
       </div>
-     
+
       <a href="#top" class="scroll-to-top"><i class="fas fa-arrow-up"></i></a>
     </footer>
     <script
