--- a/p1.html
+++ b/p1.html
@@ -29,7 +29,7 @@
         <!-- Nav Bar -->
 
         <nav class="navbar navbar-expand-lg navbar-dark">
-          <a class="navbar-brand trade-winds-regular" href="./main.html"
+          <a class="navbar-brand trade-winds-regular" href="./index.html"
             >QUANGPHUOC</a
           >
           <button
@@ -53,7 +53,7 @@
                 <a class="nav-link" href="#">Gọi mua: 0899838390</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./login">Đăng nhập</a>
+                <a class="nav-link" href="./login.html">Đăng nhập</a>
               </li>
             </ul>
           </div>
@@ -120,10 +120,56 @@
       </div>
     </div>
     <h1>Thông số kỹ thuật:</h1>
-    <div class="tskt">
-        
-
-
+    <div class="tskt row">
+        <div class="col-lg-3 tskt-list">
+            <ul>
+                <li>Model: Katana 15 B13VEK-252VN</li>
+                <li>Màu sắc: Đen</li>
+                <li>Nhà sản xuất: MSI</li>
+                <li>Xuất xứ: Trung Quốc</li>
+                <li>Năm ra mắt : 2023</li>
+                <li>Thời gian bảo hành: 24 Tháng</li>
+                <li>CPU: Intel Core i7</li>
+                <li>Loại CPU: 13620H</li>
+                <li>Tốc độ CPU: Đang cập nhật</li>
+            </ul>
+        </div>
+        <div class="col-lg-3 tskt-list">
+            <ul>
+                <li>Bộ nhớ đệm: 24 MB Cache</li>
+                <li>Tốc độ CPU tối đa: 4.9 GHz</li>
+                <li>Loại RAM: DDR5</li>
+                <li>Dung lượng RAM: 8 GB</li>
+                <li>Tốc độ Bus RAM: 5200 MHz</li>
+                <li>Loại ổ đĩa cứng: SSD</li>
+                <li>Dung lượng ổ cứng: 512 GB</li>
+                <li>Bộ xử lý đồ họa: NVIDIA GeForce RTX 4050 6GB</li>
+            </ul>
+        </div>
+        <div class="col-lg-3 tskt-list">
+            <ul>
+                <li>Loại màn hình: Tấm nền IPS, 144Hz, 45%NTSC</li>
+                <li>Kích thước màn hình: 15.6 inch</li>
+                <li>Độ phân giải màn hình: Full HD (1920 x 1080)</li>
+                <li>Công nghệ âm thanh: Nahimic Audio</li>
+                <li>Chuẩn WiFi: Wi-Fi 6 + Bluetooth v5.2</li>
+                <li>Chuẩn LAN: 1x RJ45 Gigabit LAN</li>
+                <li>Cổng USB: 1x Type-C (USB3.2 Gen1 / DP); 2x Type-A USB3.2 Gen1; 1x Type-A USB2.0</li>
+                <li>Cổng HDMI: 1x HDMI™ 2.1 (8K @ 60Hz / 4K @ 120Hz)</li>
+            </ul>
+        </div>
+        <div class="col-lg-3 tskt-list">
+            <ul>
+                <li>Kết nối khác laptop: 1 x Mic-in/Headphone-out Combo Jack</li>
+                <li>Camera: Webcam HD type (30fps@720p)</li>
+                <li>Chất liệu vỏ: Vỏ nhựa</li>
+                <li>Tính năng mở rộng: Đèn bàn phím 4-Zone RGB Gaming Keyboard</li>
+                <li>HĐH kèm theo máy: Windows 11 Home</li>
+                <li>Loại Pin Laptop : Battery 3-Cell 53.5 Battery (Whr) 200W adapter</li>
+                <li>Khối lượng sản phẩm (kg): 2.25 kg</li>
+                <li>Kích thước sản phẩm: 359 x 259 x 24.9 mm</li>
+            </ul>
+        </div>  
     </div>
 
     <!-- Footer -->
@@ -136,9 +182,9 @@
         <div class="footer-section more">
           <h3>Thêm</h3>
           <ul>
-            <li><a href="./main.html">Trang chủ</a></li>
+            <li><a href="./index.html">Trang chủ</a></li>
             <li><a href="./store.html">Sản phẩm</a></li>
-            <li><a href="./login">Đăng nhập</a></li>
+            <li><a href="./login.html">Đăng nhập</a></li>
           </ul>
         </div>
         <div class="footer-section contact">
