--- a/store.html
+++ b/store.html
@@ -29,7 +29,7 @@
         <!-- Nav Bar -->
 
         <nav class="navbar navbar-expand-lg navbar-dark">
-          <a class="navbar-brand trade-winds-regular" href="./main.html"
+          <a class="navbar-brand trade-winds-regular" href="./index.html"
             >QUANGPHUOC</a
           >
           <button
@@ -53,7 +53,7 @@
                 <a class="nav-link" href="#">Gọi mua: 0899838390</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./login">Đăng nhập</a>
+                <a class="nav-link" href="./login.html">Đăng nhập</a>
               </li>
             </ul>
           </div>
@@ -80,7 +80,7 @@
           <img src="laptop2.jpg" alt="Laptop 2" />
           <h3>Laptop XYZ</h3>
           <p class="price">25,000,000 VND</p>
-          <button class="btn"><a class="details" href="">Chi tiết</a></button>
+          <button class="btn"><a class="details" href="./p1.html">Chi tiết</a></button>
         </div>
         <!-- Product 3 -->
         <div class="product-item">
@@ -98,7 +98,7 @@
         </div>
         <!-- Laptop 5  -->
         <div class="product-item">
-          <img src="laptop2.jpg" alt="Laptop 2" />
+          <img src="laptop2.jpg" alt="Laptop 5" />
           <h3>Laptop XYZ</h3>
           <p class="price">25,000,000 VND</p>
           <button class="btn"><a class="details" href="">Chi tiết</a></button>
@@ -116,9 +116,9 @@
         <div class="footer-section more">
           <h3>Thêm</h3>
           <ul>
-            <li><a href="./main.html">Trang chủ</a></li>
+            <li><a href="./index.html">Trang chủ</a></li>
             <li><a href="./store.html">Sản phẩm</a></li>
-            <li><a href="./login">Đăng nhập</a></li>
+            <li><a href="./login.html">Đăng nhập</a></li>
           </ul>
         </div>
         <div class="footer-section contact">
