--- a/p1.html
+++ b/p1.html
@@ -117,9 +117,12 @@
             <li>Microsoft Office 365 bản quyền 1 năm</li>
           </ul>
         </div>
+        <button onclick="buy()" class="btnm" >Mua Ngay</button>
       </div>
     </div>
-    <h1>Thông số kỹ thuật:</h1>
+
+
+    <span class="tskt-head">Thông số kỹ thuật:</span>
     <div class="tskt row">
         <div class="col-lg-3 tskt-list">
             <ul>
