--- a/login.html
+++ b/login.html
@@ -75,6 +75,7 @@
           <input type="submit" value="Login" onclick="login()" />
         </form>
       </div>
+      <span>Chưa đăng nhập? Hãy </span><a href="./signup.html">Đăng kí</a>
     </div>
 
     <!-- Footer -->
