--- a/p1.html
+++ b/p1.html
@@ -99,8 +99,6 @@
             alt="Hình ảnh 6"
             class="carousel-image"
           />
-
-          <!-- Thêm hình ảnh khác nếu cần -->
         </div>
         <button class="carousel-button prev" onclick="changeSlide(-1)">
           ❮
@@ -123,62 +121,324 @@
         <button onclick="buy()" class="btnm">Mua Ngay</button>
       </div>
     </div>
+    <!-- tskt  -->
+    <div class="igdd">
+      <h1>Thông số kỹ thuật</h1>
+      <img
+        class="igd"
+        src="https://cdn.nguyenkimmall.com/images/thumbnails/696/522/companies/_1/Content/TSKT-2021/laptop/10055018-laptop-msi-katana-15-i7-13620h-b13vek-252vn-tskt.jpg"
+        alt=""
+      />
+      <br /><button
+        type="button"
+        class="btn btn-primary"
+        data-bs-toggle="modal"
+        data-bs-target="#staticBackdrop"
+      >
+        Xem thêm chi tiết
+      </button>
+    </div>
 
-    <span class="tskt-head">Thông số kỹ thuật:</span>
-    <div class="tskt row">
-      <div class="col-lg-3 tskt-list">
-        <ul>
-          <li>Model: Katana 15 B13VEK-252VN</li>
-          <li>Màu sắc: Đen</li>
-          <li>Nhà sản xuất: MSI</li>
-          <li>Xuất xứ: Trung Quốc</li>
-          <li>Năm ra mắt : 2023</li>
-          <li>Thời gian bảo hành: 24 Tháng</li>
-          <li>CPU: Intel Core i7</li>
-          <li>Loại CPU: 13620H</li>
-          <li>Tốc độ CPU: Đang cập nhật</li>
-        </ul>
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="staticBackdrop"
+      data-bs-backdrop="static"
+      data-bs-keyboard="false"
+      tabindex="-1"
+      aria-labelledby="staticBackdropLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog .modal-dialog-scrollable">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="staticBackdropLabel">
+              Thông số kỹ thuật
+            </h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <table class="table">
+              <tr>
+                <td class="title">Model:</td>
+                <td class="value">Katana 15 B13VEK-252VN</td>
+              </tr>
+              <tr>
+                <td class="title">Màu sắc:</td>
+                <td class="value">Đen</td>
+              </tr>
+              <tr>
+                <td class="title">Nhà sản xuất:</td>
+                <td class="value">MSI</td>
+              </tr>
+              <tr>
+                <td class="title">Năm ra mắt :</td>
+                <td class="value">2023</td>
+              </tr>
+              <tr>
+                <td class="title">Thời gian bảo hành:</td>
+                <td class="value">24 Tháng</td>
+              </tr>
+              <tr>
+                <td class="title">Xuất xứ:</td>
+                <td class="value">Trung Quốc</td>
+              </tr>
+              <tr>
+                <td class="title">CPU:</td>
+                <td class="value">Intel Core i7</td>
+              </tr>
+              <tr>
+                <td class="title">Loại CPU:</td>
+                <td class="value">13620H</td>
+              </tr>
+              <tr>
+                <td class="title">Tốc độ CPU:</td>
+                <td class="value">Đang cập nhật</td>
+              </tr>
+              <tr>
+                <td class="title">Bộ nhớ đệm:</td>
+                <td class="value">24 MB Cache</td>
+              </tr>
+              <tr>
+                <td class="title">Tốc độ CPU tối đa:</td>
+                <td class="value">4.9 GHz</td>
+              </tr>
+              <tr>
+                <td class="title">Loại RAM:</td>
+                <td class="value">DDR5</td>
+              </tr>
+              <tr>
+                <td class="title">Dung lượng RAM:</td>
+                <td class="value">8 GB</td>
+              </tr>
+              <tr>
+                <td class="title">Tốc độ Bus RAM:</td>
+                <td class="value">5200 MHz</td>
+              </tr>
+              <tr>
+                <td class="title">Loại ổ đĩa cứng:</td>
+                <td class="value">SSD</td>
+              </tr>
+              <tr>
+                <td class="title">Dung lượng ổ cứng:</td>
+                <td class="value">512 GB</td>
+              </tr>
+              <tr>
+                <td class="title">Bộ xử lý đồ họa:</td>
+                <td class="value">NVIDIA GeForce RTX 4050 6GB</td>
+              </tr>
+              <tr>
+                <td class="title">Loại màn hình:</td>
+                <td class="value">Tấm nền IPS, 144Hz, 45%NTSC</td>
+              </tr>
+              <tr>
+                <td class="title">Kích thước màn hình:</td>
+                <td class="value">15.6 inch</td>
+              </tr>
+              <tr>
+                <td class="title">Độ phân giải màn hình:</td>
+                <td class="value">Full HD (1920 x 1080)</td>
+              </tr>
+              <tr>
+                <td class="title">Công nghệ âm thanh:</td>
+                <td class="value">Nahimic Audio</td>
+              </tr>
+              <tr>
+                <td class="title">Chuẩn WiFi:</td>
+                <td class="value">Wi-Fi 6 + Bluetooth v5.2</td>
+              </tr>
+              <tr>
+                <td class="title">Chuẩn LAN:</td>
+                <td class="value">1x RJ45 Gigabit LAN</td>
+              </tr>
+              <tr>
+                <td class="title">Cổng USB:</td>
+                <td class="value">
+                  1x Type-C (USB3.2 Gen1 / DP); 2x Type-A USB3.2 Gen1; 1x Type-A
+                  USB2.0
+                </td>
+              </tr>
+              <tr>
+                <td class="title">Cổng HDMI:</td>
+                <td class="value">1x HDMI™ 2.1 (8K @ 60Hz / 4K @ 120Hz)</td>
+              </tr>
+              <tr>
+                <td class="title">Kết nối khác laptop:</td>
+                <td class="value">1 x Mic-in/Headphone-out Combo Jack</td>
+              </tr>
+              <tr>
+                <td class="title">Camera:</td>
+                <td class="value">Webcam HD type (30fps@720p)</td>
+              </tr>
+              <tr>
+                <td class="title">Chất liệu vỏ:</td>
+                <td class="value">Vỏ nhựa</td>
+              </tr>
+              <tr>
+                <td class="title">Tính năng mở rộng:</td>
+                <td class="value">Đèn bàn phím 4-Zone RGB Gaming Keyboard</td>
+              </tr>
+              <tr>
+                <td class="title">HĐH kèm theo máy:</td>
+                <td class="value">Windows 11 Home</td>
+              </tr>
+              <tr>
+                <td class="title">Loại Pin Laptop :</td>
+                <td class="value">
+                  Battery 3-Cell 53.5 Battery (Whr) 200W adapter
+                </td>
+              </tr>
+              <tr>
+                <td class="title">Khối lượng sản phẩm:</td>
+                <td class="value">2.25 kg</td>
+              </tr>
+              <tr>
+                <td class="title">Kích thước sản phẩm:</td>
+                <td class="value">359 x 259 x 24.9 mm</td>
+              </tr>
+            </table>
+          </div>
+        </div>
       </div>
-      <div class="col-lg-3 tskt-list">
-        <ul>
-          <li>Bộ nhớ đệm: 24 MB Cache</li>
-          <li>Tốc độ CPU tối đa: 4.9 GHz</li>
-          <li>Loại RAM: DDR5</li>
-          <li>Dung lượng RAM: 8 GB</li>
-          <li>Tốc độ Bus RAM: 5200 MHz</li>
-          <li>Loại ổ đĩa cứng: SSD</li>
-          <li>Dung lượng ổ cứng: 512 GB</li>
-          <li>Bộ xử lý đồ họa: NVIDIA GeForce RTX 4050 6GB</li>
-        </ul>
+    </div>
+
+    <!-- tính năng  -->
+    <div class="featuree">
+      <h1>Đẹp chuẩn chất gaming với bàn phím RGB chuyển màu 4 vùng</h1>
+      <p>
+        Laptop MSI Katana 15 i7-13620H/8GB/512GB/Win11 (B13VEK-252VN) thu hút sự
+        chú ý của hầu hết các game thủ nhờ lối thiết kế chuẩn dòng laptop gaming
+        với bàn phím đèn nền chuyển màu 4 vùng bắt mắt, cùng các phím nóng được
+        làm nổi bật độc đáo, tô điểm bằng các đường cắt xẻ tinh tế và logo rồng
+        in chìm tại mặt lưng.
+      </p>
+      <p>
+        Và dù là laptop gaming nhưng chúng lại nhẹ hơn nhiều với các laptop chơi
+        game tương tự với trọng lượng chỉ 2.25 kg. Đây là lựa chọn đáng cân nhắc
+        giúp bạn dễ dàng mang theo hàng ngày để giải trí và tiện xử lý công
+        việc.
+      </p>
+      <img
+        src="https://cdn.nguyenkimmall.com/images/companies/_1/Content/Laptop/MSI/laptop-msi-katana-15-i7-13620h-b13vek-252vn/laptop-msi-katana-15-i7-13620h-b13vek-252vn-1.jpg"
+        alt=""
+      />
+      <h1>Cân mọi tựa game kịch tính nhờ CPU Intel Core i7 Gen 13 mới nhất</h1>
+      <p>
+        Nhờ được vận hành bởi CPU Intel i7 thế hệ 13 tiên tiến, laptop MSI
+        Gaming Katana 15 (B13VEK-252VN) cải tiến đáng kể hiệu suất so với các
+        thế hệ tiền nhiệm với tốc độ tối đa cao lên đến 4.9 GHz. Kết hợp cùng bộ
+        đôi RAM 8GB DDR5 tốc độ bus tối đa "khủng" tới 5200MHz và ổ cứng SSD
+        512GB nên máy truy xuất dữ liệu nhanh, đa nhiệm trơn tru, phù hợp với
+        nhu cầu làm việc, giải trí và chơi game.
+      </p>
+      <p>
+        Đặc biệt, máy có card đồ họa NVIDIA GeForce RTX 4050 6GB cung cấp khả
+        năng xử lý đồ họa nhanh nhạy tuyệt vời, từ thiết kế 2D đến các game hiện
+        đại, từ đó giúp trải nghiệm các game mượt mà và đồ họa đẹp mắt.
+      </p>
+      <img
+        src="https://cdn.nguyenkimmall.com/images/companies/_1/Content/Laptop/MSI/laptop-msi-katana-15-i7-13620h-b13vek-252vn/laptop-msi-katana-15-i7-13620h-b13vek-252vn-2.jpg"
+        alt=""
+      />
+      <div class="row">
+        <div class="col-lg-6 k q">
+          <h1>Trải nghiệm hình ảnh đẹp "mãn nhãn"</h1>
+          <p>
+            Màn hình laptop MSI Katana 15 (B13VEK-252VN) có kích thước 15.6 inch
+            với thiết kế viền siêu mỏng, sử dụng tấm nền IPS cao cấp, cùng tần
+            số quét lớn tới 144Hz.
+          </p>
+          <p>
+            Tất cả trang bị này kết hợp mang đến trải nghiệm chơi game mượt mà,
+            cùng hình ảnh sống động và chân thực giúp bạn đắm chìm vào thế giới
+            giải trí sống động.
+          </p>
+        </div>
+        <div class="col-lg-6 q">
+          <img
+            src="https://cdn.nguyenkimmall.com/images/companies/_1/Content/Laptop/MSI/laptop-msi-katana-15-i7-13620h-b13vek-252vn/laptop-msi-katana-15-i7-13620h-b13vek-252vn-3_1.jpg"
+            alt=""
+          />
+        </div>
       </div>
-      <div class="col-lg-3 tskt-list">
-        <ul>
-          <li>Loại màn hình: Tấm nền IPS, 144Hz, 45%NTSC</li>
-          <li>Kích thước màn hình: 15.6 inch</li>
-          <li>Độ phân giải màn hình: Full HD (1920 x 1080)</li>
-          <li>Công nghệ âm thanh: Nahimic Audio</li>
-          <li>Chuẩn WiFi: Wi-Fi 6 + Bluetooth v5.2</li>
-          <li>Chuẩn LAN: 1x RJ45 Gigabit LAN</li>
-          <li>
-            Cổng USB: 1x Type-C (USB3.2 Gen1 / DP); 2x Type-A USB3.2 Gen1; 1x
-            Type-A USB2.0
-          </li>
-          <li>Cổng HDMI: 1x HDMI™ 2.1 (8K @ 60Hz / 4K @ 120Hz)</li>
-        </ul>
+      <div class="row">
+        <div class="col-lg-6 q">
+          <img
+            src="https://cdn.nguyenkimmall.com/images/companies/_1/Content/Laptop/MSI/laptop-msi-katana-15-i7-13620h-b13vek-252vn/laptop-msi-katana-15-i7-13620h-b13vek-252vn-4.jpg"
+            alt=""
+          />
+        </div>
+        <div class="col-lg-6 k q">
+          <h1>Bàn phím đèn nền RGB 4 vùng nổi bật, giúp thao tác chính xác</h1>
+          <p>
+            Bàn phím laptop MSI Katana 15 (B13VEK-252VN) được thiết kế với đèn
+            nền RGB chuyển màu 4 vùng nổi bật, tạo điểm nhấn ấn tượng, tăng hứng
+            thú khi chơi game và giải trí.
+          </p>
+          <p>
+            Đồng thời, chúng còn giúp bạn gõ văn bản khi làm việc và thao tác
+            khi chơi game chính xác hơn trong điều kiện ánh sáng yếu vào ban đêm
+            hoặc trong môi trường thiếu sáng.
+          </p>
+        </div>
       </div>
-      <div class="col-lg-3 tskt-list">
-        <ul>
-          <li>Kết nối khác laptop: 1 x Mic-in/Headphone-out Combo Jack</li>
-          <li>Camera: Webcam HD type (30fps@720p)</li>
-          <li>Chất liệu vỏ: Vỏ nhựa</li>
-          <li>Tính năng mở rộng: Đèn bàn phím 4-Zone RGB Gaming Keyboard</li>
-          <li>HĐH kèm theo máy: Windows 11 Home</li>
-          <li>
-            Loại Pin Laptop : Battery 3-Cell 53.5 Battery (Whr) 200W adapter
-          </li>
-          <li>Khối lượng sản phẩm (kg): 2.25 kg</li>
-          <li>Kích thước sản phẩm: 359 x 259 x 24.9 mm</li>
-        </ul>
+
+      <div class="row">
+        <div class="col-lg-6 k q">
+          <h1>Thưởng thức âm thanh chất lượng cao</h1>
+          <p>
+            Laptop MSI Katana 15 (B13VEK-252VN) mang đến âm thanh vòm chân thực
+            nhờ sở hữu công nghệ Nahimic và Hi-Res tiên tiến. Máy còn hỗ trợ
+            Wi-Fi 6 và Bluetooth 5.2 cho kết nối không dây nhanh chóng và ổn
+            định, phục vụ tốt cho các nhu cầu giải trí và làm việc.
+          </p>
+        </div>
+        <div class="col-lg-6 q">
+          <img
+            src="https://cdn.nguyenkimmall.com/images/companies/_1/Content/Laptop/MSI/laptop-msi-katana-15-i7-13620h-b13vek-252vn/laptop-msi-katana-15-i7-13620h-b13vek-252vn-5.jpg"
+            alt=""
+          />
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-6 q">
+          <img
+            src="https://cdn.nguyenkimmall.com/images/companies/_1/Content/Laptop/MSI/laptop-msi-katana-15-i7-13620h-b13vek-252vn/laptop-msi-katana-15-i7-13620h-b13vek-252vn-6.jpg"
+            alt=""
+          />
+        </div>
+        <div class="col-lg-6 k q">
+          <h1>Giải trí liền mạch nhờ viên pin lớn</h1>
+          <p>
+            Máy tính MSI Katana 15 (B13VEK-252VN) có viên pin lên đến 53.5 WHrs
+            cho phép người dùng sử dụng máy trong thời gian dài để làm việc,
+            giải trí chỉ với 1 lần cắm sạc.
+          </p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-6 k q">
+          <h1>Nhiều loại cổng kết nối hiện đại</h1>
+          <p>
+            Máy tính xách tay MSI Katana 15 (B13VEK-252VN) cho tốc độ truyền dữ
+            liệu cao nhờ loạt cổng kết nối hiện đại như: cổng mạng nội bộ LAN,
+            cổng 1x HDMI™ 2.1 (8K@60Hz/4K@120Hz), cổng Type-C (USB3.2 Gen1/DP),
+            cổng Type-A USB3.2 Gen1, cổng Type-A USB2.0 và jack âm thanh 3.5 mm.
+          </p>
+        </div>
+        <div class="col-lg-6 q">
+          <img
+            src="https://cdn.nguyenkimmall.com/images/companies/_1/Content/Laptop/MSI/laptop-msi-katana-15-i7-13620h-b13vek-252vn/laptop-msi-katana-15-i7-13620h-b13vek-252vn-7.jpg"
+            alt=""
+          />
+        </div>
       </div>
     </div>
 
