--- a/login.html
+++ b/login.html
@@ -53,9 +53,6 @@
                 <a class="nav-link" href="#">Gọi mua: 0899838390</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./feedback.html">Đánh giá</a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-link" href="./login.html">Đăng nhập</a>
               </li>
             </ul>
@@ -65,9 +62,9 @@
     </section>
 
     <!-- login  -->
-    <div class="container-fluid">
+    <div class="container-fluid cent">
       <div class="form">
-        <h1>SIGN UP</h1>
+        <h1 class="header-form">LOG IN</h1>
         <form>
           <label>Email</label><br />
           <input type="email" id="email" /><br />
@@ -75,10 +72,10 @@
           <input type="password" id="password" /> <br />
           <input type="checkbox" onclick="myFunction()" />Show password <br />
 
-          <input type="submit" value="Login" onclick="login()" />
+          <input class="redd" type="submit" value="Login" onclick="login()" />
         </form>
       </div>
-      <span>Chưa đăng nhập? Hãy </span><a href="./signup.html">Đăng kí</a>
+      <span>Chưa đăng nhập? Hãy </span><a  href="./signup.html">Đăng kí</a>
     </div>
 
     <!-- Footer -->
