--- a/signup.html
+++ b/signup.html
@@ -53,9 +53,6 @@
                 <a class="nav-link" href="#">Gọi mua: 0899838390</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./feedback.html">Đánh giá</a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-link" href="./login.html">Đăng nhập</a>
               </li>
             </ul>
@@ -65,9 +62,9 @@
     </section>
 
     <!-- login  -->
-    <div class="container-fluid">
+    <div class="container-fluid cent">
       <div class="form">
-        <h1>SIGN UP</h1>
+        <h1 class="header-form">SIGN UP</h1>
         <form>
           <label>Email</label><br />
           <input type="email" id="email" /><br />
@@ -79,7 +76,7 @@
           <label>Address</label><br />
           <input type="text" id="address" /><br />
 
-          <input type="submit" value="Sign Up" onclick="signUp()" />
+          <input class="redd" type="submit" value="Sign Up" onclick="signUp()" />
         </form>
       </div>
     </div>
