--- a/store.html
+++ b/store.html
@@ -76,14 +76,14 @@
           />
           <h5>Laptop MSI Katana 15 i7-13620H /8GB /512GB /Win11 (B13VEK-252VN)</h5>
           <p class="price">32,990,000 VND</p>
-          <button class="btn"><a class="details" href="p1.html">Chi tiết</a></button>
+          <button class="btn"><a class="details" href="./p1.html">Chi tiết</a></button>
         </div>
         <!-- Product 2 -->
         <div class="product-item">
           <img src="laptop2.jpg" alt="Laptop 2" />
           <h3>Laptop XYZ</h3>
           <p class="price">25,000,000 VND</p>
-          <button class="btn"><a class="details" href="./p1.html">Chi tiết</a></button>
+          <button class="btn"><a class="details" href="">Chi tiết</a></button>
         </div>
         <!-- Product 3 -->
         <div class="product-item">
@@ -95,15 +95,15 @@
         <!-- Product 4  -->
         <div class="product-item">
           <img src="laptop4.jpg" alt="Laptop 4" />
-          <h3>Laptop XYZ</h3>
+          <h3>Laptop ABC</h3>
           <p class="price">25,000,000 VND</p>
           <button class="btn"><a class="details" href="">Chi tiết</a></button>
         </div>
         <!-- Laptop 5  -->
         <div class="product-item">
           <img src="laptop2.jpg" alt="Laptop 5" />
-          <h3>Laptop XYZ</h3>
-          <p class="price">25,000,000 VND</p>
+          <h3>Laptop EDF</h3>
+          <p class="price">29,000,000 VND</p>
           <button class="btn"><a class="details" href="">Chi tiết</a></button>
         </div>
       </div>
