--- a/login.html
+++ b/login.html
@@ -67,9 +67,9 @@
         <h1 class="header-form">LOG IN</h1>
         <form>
           <label>Email</label><br />
-          <input type="email" id="email" /><br />
+          <input class="widt" type="email" id="email" /><br />
           <label>Password</label><br />
-          <input type="password" id="password" /> <br />
+          <input class="widt" type="password" id="password" /> <br />
           <input type="checkbox" onclick="myFunction()" />Show password <br />
 
           <input class="redd" type="submit" value="Login" onclick="login()" />
