--- a/signup.html
+++ b/signup.html
@@ -53,7 +53,7 @@
                 <a class="nav-link" href="#">Gọi mua: 0899838390</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./login.html">Đăng nhập</a>
+                <a class="nav-link" id="textt" href="./login.html">Đăng nhập</a>
               </li>
             </ul>
           </div>
@@ -67,14 +67,14 @@
         <h1 class="header-form">SIGN UP</h1>
         <form>
           <label>Email</label><br />
-          <input type="email" id="email" /><br />
+          <input class="widt" type="email" id="email" /><br />
           <label>Password</label><br />
-          <input type="password" id="password" /> <br />
+          <input class="widt" type="password" id="password" /> <br />
           <input type="checkbox" onclick="myFunction()" />Show password <br />
           <label>Day of birth</label><br />
-          <input type="date" id="date" /><br />
+          <input class="widt" type="date" id="date" /><br />
           <label>Address</label><br />
-          <input type="text" id="address" /><br />
+          <input class="widt" type="text" id="address" /><br />
 
           <input class="redd" type="submit" value="Sign Up" onclick="signUp()" />
         </form>
