--- a/store.html
+++ b/store.html
@@ -53,7 +53,7 @@
                 <a class="nav-link" href="#">Gọi mua: 0899838390</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./login.html">Đăng nhập</a>
+                <a class="nav-link" id="textt" href="./login.html">Đăng nhập</a>
               </li>
             </ul>
           </div>
@@ -151,4 +151,5 @@
       crossorigin="anonymous"
     ></script>
   </body>
+  <script src="./js/all.js"></script>
 </html>
