--- a/store.html
+++ b/store.html
@@ -77,28 +77,28 @@
         </div>
         <!-- Product 2 -->
         <div class="product-item">
-          <img src="laptop2.jpg" alt="Laptop 2" />
+          <img src="https://ictsaigon.com.vn/storage/products/laptop/dell-inspiron-5625/dell-inspiron-5625-600x600.webp" alt="Laptop 2" />
           <h3>Laptop XYZ</h3>
           <p class="price">25,000,000 VND</p>
           <button class="btn"><a class="details" href="">Chi tiết</a></button>
         </div>
         <!-- Product 3 -->
         <div class="product-item">
-          <img src="laptop3.jpg" alt="Laptop 3" />
+          <img src="https://ictsaigon.com.vn/storage/products/laptop/dell-inspiron-5625/dell-inspiron-5625-600x600.webp" alt="Laptop 3" />
           <h3>Laptop 123</h3>
           <p class="price">30,000,000 VND</p>
           <button class="btn"><a class="details" href="">Chi tiết</a></button>
         </div>
         <!-- Product 4  -->
         <div class="product-item">
-          <img src="laptop4.jpg" alt="Laptop 4" />
+          <img src="https://ictsaigon.com.vn/storage/products/laptop/dell-inspiron-5625/dell-inspiron-5625-600x600.webp" alt="Laptop 4" />
           <h3>Laptop ABC</h3>
           <p class="price">25,000,000 VND</p>
           <button class="btn"><a class="details" href="">Chi tiết</a></button>
         </div>
         <!-- Laptop 5  -->
         <div class="product-item">
-          <img src="laptop2.jpg" alt="Laptop 5" />
+          <img src="https://ictsaigon.com.vn/storage/products/laptop/dell-inspiron-5625/dell-inspiron-5625-600x600.webp" alt="Laptop 5" />
           <h3>Laptop EDF</h3>
           <p class="price">29,000,000 VND</p>
           <button class="btn"><a class="details" href="">Chi tiết</a></button>
